# ProyectoPGPT

./: README.md  pyproject.toml  requirements.txt  setup.py
pentestgpt/: README.md  main.py  test_connection.py
pentestgpt/logs/commands/: command_log_test.json
pentestgpt/logs/sessions/: sesion_demo.txt  test1.txt
pentestgpt/prompts/: prompt_class.py
pentestgpt/utils/: chatgpt.py  llm_api.py  pentest_gpt.py  script_create_path.py  task_handler.py  web_parser.py
pentestgpt/utils/APIs/: chatgpt_api.py  gemini_api.py  gpt4all_api.py  module_import.py  titan_api.py
pentestgpt/utils/template/: template_v1.docx  template_v2.docx
sspentestlab/: main.py  test.py  test_connection.py
sspentestlab/config/: chat_config.py
sspentestlab/logs/commands/: command_log_with_errors.json
sspentestlab/logs/sessions/: 1725362425.393615.txt
sspentestlab/prompts/: prompt_class - Copy.py  prompt_class-clean.py  prompt_class-detodo.py  prompt_class-new.py  prompt_class.py
sspentestlab/rag/: Tarta_Fantasia.txt  Testing IP.txt  arbol_tareas.txt  pentesting_commands.txt
sspentestlab/storage/: index_store.json
sspentestlab/utils/: chatgpt.py  llm_api.py  pentest_gpt.py  prompt_select.py  report_generator.py  script_code_command.py  search.py  sspentestlab_gpt.py  task_handler.py  web_parser.py
sspentestlab/utils/APIs/: azure_api.py  chatgpt_api.py  gemini_api.py  gpt4all_api.py  langollama_api-old.py  langollama_api.py  llama_api.py  llangollama_api-funcional.py  module_import.py  ollama_api.py  rag_utils.py  titan_api.py
