[tool.poetry]
name = "sspentestlab"
version = "0.14.0"
description = "SSPentestLab is an LLM-powered penetration testing tool."
authors = ["Ali Vafaev <ali.vafaev@soprasteria.com>", "Tomas Bastante <tomas.bastante@soprasteria.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.0"
asgiref = "3.8.1"
attrs = "24.2.0"
backoff = "2.2.1"
bcrypt = "4.2.0"
beautifulsoup4 = ">=4.12.3,<5.0.0"
black = "24.8.0"
cachetools = "5.5.0"
certifi = "2024.8.30"
cffi = "1.17.1"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
chromadb = "0.5.7"
click = "8.1.7"
colorama = "0.4.6"
coloredlogs = "15.0.1"
cryptography = "41.0.4"
cssselect = "1.2.0"
dataclasses-json = "0.6.7"
Deprecated = "1.2.14"
dirtyjson = "1.0.8"
distro = "1.9.0"
docx = "0.2.4"
docx2pdf = "0.1.8"
durationpy = "0.7"
emoji = "2.14.0"
fastapi = "0.115.0"
feedparser = "6.0.11"
filelock = "3.16.1"
flatbuffers = "24.3.25"
frozenlist = "1.4.1"
fsspec = "2024.9.0"
google = "3.0.0"
google-ai-generativelanguage = "0.6.4"
google-auth = "2.35.0"
googleapis-common-protos = "1.65.0"
gpt4all = "2.8.2"
greenlet = "3.1.1"
grpcio = "1.66.1"
h11 = "0.14.0"
httpx = "0.27.0"
huggingface-hub = "0.26.2"
humanfriendly = "10.0"
idna = "3.10"
inquirerpy = "0.3.4"
jieba3k = "0.35.1"
Jinja2 = "3.1.4"
joblib = "1.4.2"
keyring = "23.0.0"
kubernetes = "31.0.0"
langchain = "0.3.4"
langchain-chroma = "0.1.4"
langchain-core = "0.3.20"
langchain-ollama = "0.2.1"
langchain-openai = "0.2.3"
langdetect = "1.0.9"
langfuse = "1.9.2"
llama-index = "0.11.23"
llama-index-core = "0.12.0"
loguru = "0.7.2"
lxml = "5.3.0"
markdown-it-py = "3.0.0"
MarkupSafe = "3.0.2"
mmh3 = "5.0.1"
monotonic = "1.6"
numpy = "1.26.4"
openai = "1.52.2"
pandas = "2.2.3"
pinecone-client = "3.2.2"
protobuf = "4.25.5"
psutil = "6.0.0"
pytest = "8.3.3"
python-dateutil = "2.8.2"
python-docx = "1.1.2"
python-dotenv = "1.0.1"
pytz = "2023.4"
pyyaml = "6.0.2"
regex = "2024.9.11"
requests = "2.32.3"
rich = "13.8.1"
scikit-learn = "1.5.2"
scipy = "1.14.1"
sentence-transformers = "3.2.1"
SQLAlchemy = "2.0.35"
striprtf = "0.0.26"
sympy = "1.13.1"
tabulate = "0.9.0"
tenacity = "8.5.0"
torch = "2.5.0"
transformers = "4.46.0"
uvicorn = "0.30.6"

[tool.poetry.scripts]
sspentestlab = "sspentestlab.main:main"
sspentestlab-connection = "sspentestlab.test_connection:main"
sspentestlab-cookie = "sspentestlab.extract_cookie:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
